--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Tangerine|Inconsolata|Pacifico|Roboto|Quicksand|Rancho|VT323">
+    <meta property="og:url" content="https://ngrok.com/early-access" />
+    <meta property="og:title" content="Your Title" />
 
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Bachelor%27s_button%2C_Basket_flower%2C_Boutonniere_flower%2C_Cornflower_-_3.jpg/1200px-Bachelor%27s_button%2C_Basket_flower%2C_Boutonniere_flower%2C_Cornflower_-_3.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
